chore: use clamp for bounded values